--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,8 @@ version: "3.9"  # optional since v1.27.0
 services:
   web:
     build: .
+    image: webapp
     ports:
       - "80:5000"
+    restart: always
    
